--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "An Introduction to Neuroscience"
-author: "Robert J Calin-Jageman and others"
+author: "Edited by Elizabeth Kirby, PhD"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
@@ -14,10 +14,36 @@ description: "This is a free, open-source Introduction to Textbook for undergrad
 
 # Introduction
 
-This is a free, open-source, peer-reviewed, high-quality Introduction to Neuroscience textbook... or it soon will be.
+This is an early draft of a chapter from a new Introduction to Neuroscience textbook, an effort that is:
 
-At this stage, I have only Chapter \@ref(neurophysiology) Neurophysiology  posted in draft form.  More to come!
+- Open source, available free to students
 
-- Online version: https://rcalinjageman.github.io/an_introduction_to_neuroscience/
-- Pdf: 
-- epub: 
+- Faculty created
+
+- Peer reviewed (in progress)
+
+- High quality, including professional illustrations and learning resources
+
+***
+
+This textbook is edited by [Elizabeth Kirby](https://u.osu.edu/kirbylab/), PhD and supported by funding from the [National Science Foundation](https://www.nsf.gov/awardsearch/simpleSearchResult?queryText=elizabeth+kirby&ActiveAwards=true)
+
+
+This early preview of the book is posted by [Bob Calin-Jageman](https://calin-jageman.net/lab/), an author Chapter (\@ref(neurophysiology) on neurophysiology.  The purpose of posting this early-stage chapter here is:
+
+- To make it available for Dr. Bob's Introduction to Neuroscience students
+
+- To gather feedback from others interested in this chapter or project
+
+
+If you have any feedback, find a typo, notice an innaccuracy, etc... please submit your comments as in Issue on github here: https://github.com/rcalinjageman/an_introduction_to_neuroscience/issues
+
+***
+
+You can access early-stage draft in three different formats:
+
+- [Online, in HTML](https://rcalinjageman.github.io/an_introduction_to_neuroscience/)
+
+- [Pdf](https://rcalinjageman.github.io/an_introduction_to_neuroscience/docs/Intro_to_Neuroscience.pdf)
+
+- [epub](https://rcalinjageman.github.io/an_introduction_to_neuroscience/docs/Intro_to_Neuroscience.epub)
