fixed links to pdf and epub

--- a/index.Rmd
+++ b/index.Rmd
@@ -44,6 +44,6 @@ You can access early-stage draft in three different formats:
 
 - [Online, in HTML](https://rcalinjageman.github.io/an_introduction_to_neuroscience/)
 
-- [Pdf](https://rcalinjageman.github.io/an_introduction_to_neuroscience/docs/Intro_to_Neuroscience.pdf)
+- [Pdf](https://github.com/rcalinjageman/an_introduction_to_neuroscience/raw/main/docs/Intro_to_Neuroscience.pdf)
 
-- [epub](https://rcalinjageman.github.io/an_introduction_to_neuroscience/docs/Intro_to_Neuroscience.epub)
+- [epub](https://github.com/rcalinjageman/an_introduction_to_neuroscience/raw/main/docs/Intro_to_Neuroscience.epub)
