--- a/docs/Intro_to_Neuroscience.tex
+++ b/docs/Intro_to_Neuroscience.tex
@@ -78,13 +78,13 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={An Introduction to Neuroscience},
-  pdfauthor={Edited by Elizabeth Kirby, PhD},
+  pdfauthor={Edited by Elizabeth D. Kirby, Melissa J. Glenn, Noah J. Sandstrom, and Christina L. Williams CL},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
 \title{An Introduction to Neuroscience}
-\author{Edited by Elizabeth Kirby, PhD}
-\date{2023-01-01}
+\author{Edited by Elizabeth D. Kirby, Melissa J. Glenn, Noah J. Sandstrom, and Christina L. Williams CL}
+\date{2023-01-04}
 
 \begin{document}
 \maketitle
@@ -111,7 +111,21 @@ This is an early draft of a chapter from a new Introduction to Neuroscience text
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-This textbook is edited by \href{https://u.osu.edu/kirbylab/}{Elizabeth Kirby}, PhD and supported by funding from the \href{https://www.nsf.gov/awardsearch/simpleSearchResult?queryText=elizabeth+kirby\&ActiveAwards=true}{National Science Foundation}
+This textbook is edited by
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://u.osu.edu/kirbylab/}{Elizabeth Kirby}, PhD
+\item
+  \href{https://web.colby.edu/mjglenn/about-me/}{Melissa J. Glenn}, PhD
+\item
+  \href{https://psychology.williams.edu/profile/nsandstr/}{Noah J. Sandstrom}, PhD and
+\item
+  \href{https://scholars.duke.edu/person/williams}{Christina L. Williams, CL}
+\end{itemize}
+
+and supported by funding from the \href{https://www.nsf.gov/awardsearch/simpleSearchResult?queryText=elizabeth+kirby\&ActiveAwards=true}{National Science Foundation}
 
 This early preview of the book is posted by \href{https://calin-jageman.net/lab/}{Bob Calin-Jageman}, an author Chapter (\ref{neurophysiology} on neurophysiology. The purpose of posting this early-stage chapter here is:
 
@@ -140,7 +154,9 @@ You can access early-stage draft in three different formats:
 \hypertarget{neurophysiology}{%
 \chapter{Neurophysiology}\label{neurophysiology}}
 
-This chapter authored by Robert J Calin-Jageman. Send feedback by submitting an issue on github: \url{https://github.com/rcalinjageman/an_introduction_to_neuroscience/issues}
+This chapter authored by Robert J Calin-Jageman.
+
+Send feedback by submitting an issue on github: \url{https://github.com/rcalinjageman/an_introduction_to_neuroscience/issues}
 
 \hypertarget{neurophysiology-introduction}{%
 \section{Introduction}\label{neurophysiology-introduction}}
